# bst

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: degree.hpp  node.hpp  tree.hpp
src/: main.cpp
